--- a/app/views/event/event.scala.html
+++ b/app/views/event/event.scala.html
@@ -111,7 +111,7 @@
 
                 <div class="row">
                     <div class="col-xs-12">
-                        <div class="event-share-box">
+                        <div class="share-box">
                             @eventLikeForm
                             @shared.fbShare(shareUrl)
                         </div>
