--- a/app/views/browse/browseEventBox.scala.html
+++ b/app/views/browse/browseEventBox.scala.html
@@ -16,7 +16,9 @@
                             <p><br></p>
                         }
                         <div class="col-xs-6 no-gutter">
-                            <button class="btn btn-lg btn-orange btn-booking">@Messages("event.button.select")&nbsp;<span class="glyphicon glyphicon-ok"></span></button>
+                            <div class="booking-btn-wrapper">
+                                <button class="btn btn-orange btn-booking">@Messages("event.button.select")&nbsp;<span class="glyphicon glyphicon-ok"></span></button>
+                            </div>
                         </div>
                         <div class="col-xs-6 no-gutter">
                             <div class="price-wrapper">
