- Fixed tags on ProfilePage

--- a/app/views/profile/profilePropertiesBox.scala.html
+++ b/app/views/profile/profilePropertiesBox.scala.html
@@ -1,4 +1,4 @@
-@(tagList: Option[List[models.profile.TagWord]], userProfile: UserProfile)(implicit messages: Messages)
+@(tagList: Option[List[String]], userProfile: UserProfile)(implicit messages: Messages)
 
 <div class="panel panel-default panel-dropshadow margin-top">
     <div class="panel-body">
