--- a/app/views/event/event.scala.html
+++ b/app/views/event/event.scala.html
@@ -4,7 +4,7 @@
         eventDateSuggestionForm: Form[EventDateSuggestionForm],
         eventPropertyList: EventPropertyList,
         metaData: Option[viewmodels.MetaData] = None,
-        eventBoxes: Option[List[models.viewmodels.EventBox]] = None,
+        eventBoxes: Option[List[models.viewmodels.BrowseEventBox]] = None,
         shareUrl: String = "",
         isThisMyEvent: Boolean = false,
         isUserHost: Boolean,
