--- a/app/views/startpage/eventList.scala.html
+++ b/app/views/startpage/eventList.scala.html
@@ -1,4 +1,4 @@
-@(eventBoxes: Option[List[models.viewmodels.EventBox]])(implicit messages: Messages)
+@(eventBoxes: Option[List[models.viewmodels.BrowseEventBox]])(implicit messages: Messages)
 <!-- Event boxes -->
 <div class="row">
   @if(eventBoxes.isDefined){
