--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -2,8 +2,8 @@
         optionsFoodAreas: Option[Seq[(String,String)]],
         optionsLocationAreas: Option[Seq[(String,String)]] = None,
         optionsIsHost: Option[Boolean] = None,
-        eventBoxes: Option[List[models.viewmodels.EventBox]],
-        profileBoxes: Option[List[models.viewmodels.ProfileBox]],
+        eventBoxes: Option[List[models.viewmodels.BrowseEventBox]],
+        profileBoxes: Option[List[models.viewmodels.BrowseProfileBox]],
         reviewBoxes: Option[List[models.viewmodels.ReviewBox]],
         asideNews: Option[List[models.content.ContentPage]],
         news: Option[List[models.content.ContentPage]],
