- Bugfix for empty collection on startpage

--- a/app/views/startpage/profileList.scala.html
+++ b/app/views/startpage/profileList.scala.html
@@ -1,4 +1,4 @@
-@(profileBoxes: Option[List[models.viewmodels.BrowseProfileBox]])(implicit messages: Messages)
+@(profileBoxes: Option[List[BrowseProfileBox]])(implicit messages: Messages)
 <!-- Profile boxes -->
 <div class="row">
   @if(profileBoxes.isDefined){
