--- a/app/views/browse/browseEventBox.scala.html
+++ b/app/views/browse/browseEventBox.scala.html
@@ -1,8 +1,8 @@
-@(boxes: List[models.viewmodels.BrowseEventBox] = Nil)(implicit messages: Messages)
+@(boxes: List[models.viewmodels.BrowseEventBox] = Nil, colClasses: String = "col-xs-12 col-sm-6 col-md-4 col-lg-3")(implicit messages: Messages)
 @if(boxes.nonEmpty) {
     <div class="row">
     @for(box: models.viewmodels.BrowseEventBox <- boxes){
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="@colClasses">
             <a href="@box.linkToEvent">
                 @defining( if(box.mainImage.isDefined){ "style=\"background-image: url('" + box.mainImage.get + "');background-size:100%;\"" } else { "" } ) { mainImage: String =>
                 <div class="thumbnail panel-startpage hover-green-dropshadow" @play.twirl.api.Html(mainImage)>
