--- a/app/views/startpage/eventList.scala.html
+++ b/app/views/startpage/eventList.scala.html
@@ -2,7 +2,7 @@
 <!-- Event boxes -->
 <div class="row">
   @if(eventBoxes.isDefined){
-    @browse.browseEventBox(eventBoxes.get)
+    @browse.browseEventBox(eventBoxes.get, "col-xs-12 col-sm-6 col-md-4")
   }else{
     <div class="col-xs-12 text-center">@play.twirl.api.Html(Messages("startpage.boxes.not-found", routes.StartPageController.index().url))</div>
   }
