--- a/app/views/browse/browseEventBox.scala.html
+++ b/app/views/browse/browseEventBox.scala.html
@@ -6,6 +6,13 @@
             <a href="@box.linkToEvent">
                 @defining( if(box.mainImage.isDefined){ "style=\"background-image: url('" + box.mainImage.get + "');background-size:100%;\"" } else { "" } ) { mainImage: String =>
                 <div class="thumbnail panel-startpage hover-green-dropshadow" @play.twirl.api.Html(mainImage)>
+                    @if(box.firstBookableDateTime.isDefined){
+                        <div class="ribbon-wrapper date-snippet-browse-event-box">
+                            <div class="ribbon-front"><span class="ribbon-text">@box.firstBookableDateTime</span></div>
+                            <div class="ribbon-edge-topleft"></div>
+                            <div class="ribbon-edge-bottomleft"></div>
+                        </div>
+                    }
                     <div class="body">
                         @shared.hostImageCircle(box.userImage.getOrElse(""),cssClassWrapper = "white-border drop-shadow")
                         <h2>@box.eventName</h2>
