Price color changed from red to black

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -29,7 +29,7 @@
 @hdc-gold: #a48b74;
 @hdc-black: #000;
 @hdc-red: #8E0000;
-@hdc-price-red: #d25b5b;
+@hdc-price-red: #000;
 @hdc-medium-light-red: #ffc1c1;
 @hdc-light-red: #fff4f4;
 @hdc-dark-light-green: lighten(@hdc-green, 5%);
@@ -2566,7 +2566,7 @@ h3.aside-title {
   font-size:1.4em;
   font-weight:bold;
   vertical-align: middle;
-  color:@hdc-red;
+  color:@hdc-price-red;
 }
 .panel-startpage hr
 {
