Tabs no longer large

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -2947,7 +2947,7 @@ h3.aside-title {
 .nav-tabs-profile {
   position: relative;
   z-index: 10;
-  margin-top: -46px;
+  margin-top: -43px;
   padding-left:15px;
   border-bottom:1px solid @hdc-gray;
 }
@@ -2957,8 +2957,8 @@ h3.aside-title {
 .nav-tabs-profile > li > a,
 .nav-tabs-profile-edit  > li > a
 {
-  font-size:1.2em;
-  font-weight:bold;
+  font-size:1.0em;
+  font-weight:normal;
   color:@hdc-dark-gray;
   border-top:2px solid @hdc-gray;
   border-left:1px solid @hdc-gray;
