--- a/app/views/custom/mails/unknownEmailNotice.scala.html
+++ b/app/views/custom/mails/unknownEmailNotice.scala.html
@@ -1,9 +1,11 @@
 @()(implicit request: RequestHeader, messages: Messages)
-<html>
-    <body>
-        <p>@Messages("mails.unknownEmail.body.part1")</p>
-        <p>@Messages("mails.unknownEmail.body.part2")</p>
-        @mailLink = { <a href="mailto:@Messages("mails.unknownEmail.body.maillink")">@Messages("mails.unknownEmail.body.mailtitle")</a> }
-        <p>@play.twirl.api.Html(Messages("mails.unknownEmail.body.part3", mailLink))</p>
-    </body>
-</html>
+
+@mailLink = {
+    <a href="mailto:@Messages("mails.unknownEmail.body.maillink")">@Messages("mails.unknownEmail.body.mailtitle")</a>
+}
+
+@mails.mainMail(title = Messages("mails.unknownEmail.subject")) {
+    <p>@Messages("mails.unknownEmail.body.part1")</p>
+    <p>@Messages("mails.unknownEmail.body.part2")</p>
+   <p>@play.twirl.api.Html(Messages("mails.unknownEmail.body.part3", mailLink))</p>
+}
