--- a/app/views/custom/mails/passwordChangedNotice.scala.html
+++ b/app/views/custom/mails/passwordChangedNotice.scala.html
@@ -1,10 +1,11 @@
 @(user: securesocial.core.BasicProfile)(implicit request: RequestHeader, messages: Messages, env: securesocial.core.RuntimeEnvironment)
-
+@title = @{Messages("mails.passwordChangedNotice.subject")}
 @mailLink = {
     <a href="@env.routes.loginPageUrl">@Messages("mails.passwordChangedNotice.body.linkToLogin")</a>
 }
 
-@mails.mainMail(title = Messages("mails.passwordChangedNotice.subject")) {
+@mails.mainMail(title = title) {
+    <h1>@title</h1>
     <p>@Messages("mails.passwordChangedNotice.body.part1", user.firstName.getOrElse(user.email.get))</p>
     <p>@Html(Messages("mails.passwordChangedNotice.body.part2", mailLink))</p>
 }
