--- a/app/views/custom/mails/passwordResetEmail.scala.html
+++ b/app/views/custom/mails/passwordResetEmail.scala.html
@@ -1,10 +1,11 @@
 @(user: securesocial.core.BasicProfile, token: String)(implicit request: RequestHeader, messages: Messages, env: securesocial.core.RuntimeEnvironment)
-
+@title = @{Messages("mails.passwordResetEmail.subject")}
 @mailLink = {
     <a href="@env.routes.resetPasswordUrl(token)">@Messages("mails.passwordResetEmail.body.linkToResetPassword")</a>
 }
 
-@mails.mainMail(title = Messages("mails.passwordResetEmail.subject")) {
+@mails.mainMail(title = title) {
+    <h1>@title</h1>
     <p>@Messages("mails.passwordResetEmail.body.part1", user.firstName.getOrElse(user.email.get))</p>
     <p>@Html(Messages("mails.passwordResetEmail.body.part2", mailLink))</p>
 }
