--- a/app/views/custom/mails/signUpEmail.scala.html
+++ b/app/views/custom/mails/signUpEmail.scala.html
@@ -1,10 +1,11 @@
 @(token: String)(implicit request: RequestHeader, messages: Messages, env: securesocial.core.RuntimeEnvironment)
-
+@title = @{Messages("mails.sendSignUpEmail.subject")}
 @mailLink = {
     <a href="@env.routes.signUpUrl(token)">@Messages("mails.sendSignUpEmail.body.linkToRegistration")</a>
 }
 
 @mails.mainMail(title = Messages("mails.sendSignUpEmail.subject")) {
+    <h1>@title</h1>
     <p>@Messages("mails.sendSignUpEmail.body.part1")</p>
     <p>@Html(Messages("mails.sendSignUpEmail.body.part2", mailLink))</p>
 }
