--- a/app/views/custom/mails/welcomeEmail.scala.html
+++ b/app/views/custom/mails/welcomeEmail.scala.html
@@ -1,6 +1,8 @@
 @(user: securesocial.core.BasicProfile)(implicit request: RequestHeader, messages: Messages, env: securesocial.core.RuntimeEnvironment)
+@title = @{Messages("mails.welcomeEmail.subject")}
 
-@mails.mainMail(title = Messages("mails.welcomeEmail.subject")) {
+@mails.mainMail(title = title) {
+    <h1>@title</h1>
     <p>@Messages("mails.welcomeEmail.body.part1", user.firstName.getOrElse(user.email.get))</p>
     <p>@Messages("mails.welcomeEmail.body.part2") <a href="@env.routes.loginPageUrl">@Messages("mails.welcomeEmail.body.linkToLogin")</a></p>
 }
