--- a/app/views/event/bookingSuccessDetails.scala.html
+++ b/app/views/event/bookingSuccessDetails.scala.html
@@ -1,34 +1,37 @@
-@(eventBookingSuccess: EventBookingSuccess)(implicit messages: Messages)
+@(eventBookingSuccess: EventBookingSuccess, renderForEmail: Boolean = false)(implicit messages: Messages)
+@ulStyle = @{if(renderForEmail){"list-style:none;20px 20px 10px 20px;border:1px solid #e0e0e0;background-color:#fafafa"}else{""}}
+@liStyle = @{if(renderForEmail){"margin:0 0 10px 0;"}else{""}}
+@rowStyle = @{if(renderForEmail){"width:100%;clear:both"}else{""}}
 
-<ul class="list-group">
-    <li class="list-group-item">
-        <div class="row">
+<ul class="list-group" style="@ulStyle">
+    <li class="list-group-item" style="@liStyle">
+        <div class="row" style="@rowStyle">
             <div class="col-md-3"><strong>@Messages("event.book.success.event-name")</strong></div>
             <div class="col-md-9"><strong><a href="@eventBookingSuccess.eventLink">@eventBookingSuccess.eventName</a></strong></div>
         </div>
     </li>
     @if(eventBookingSuccess.mealType.isDefined) {
-        <li class="list-group-item">
-            <div class="row">
+        <li class="list-group-item" style="@liStyle">
+            <div class="row" style="@rowStyle">
                 <div class="col-md-3"><span class="glyphicon glyphicon-cutlery"></span> @Messages("event.book.success.meal-type")</div>
                 <div class="col-md-9">@eventBookingSuccess.mealType.get</div>
             </div>
         </li>
     }
-    <li class="list-group-item">
-        <div class="row">
+    <li class="list-group-item" style="@liStyle">
+        <div class="row" style="@rowStyle">
             <div class="col-md-3"><span class="glyphicon glyphicon-calendar"></span> @Messages("event.book.chosen.date")</div>
             <div class="col-md-9">@eventBookingSuccess.date</div>
         </div>
     </li>
-    <li class="list-group-item">
-        <div class="row">
+    <li class="list-group-item" style="@liStyle">
+        <div class="row" style="@rowStyle">
             <div class="col-md-3"><span class="glyphicon glyphicon-time"></span> @Messages("event.book.chosen.time")</div>
             <div class="col-md-9">@eventBookingSuccess.time</div>
         </div>
     </li>
-    <li class="list-group-item">
-        <div class="row">
+    <li class="list-group-item" style="@liStyle">
+        <div class="row" style="@rowStyle">
             <div class="col-md-3"><span class="glyphicon glyphicon-user"></span> @Messages("event.book.guest.label")</div>
             <div class="col-md-9">
                 <strong>@eventBookingSuccess.guestFullName</strong><br>
@@ -38,22 +41,22 @@
             </div>
         </div>
     </li>
-    <li class="list-group-item">
-        <div class="row">
+    <li class="list-group-item" style="@liStyle">
+        <div class="row" style="@rowStyle">
             <div class="col-md-3"><span class="glyphicon glyphicon-user"></span> @Messages("event.book.nr-of-guests.label")</div>
             <div class="col-md-9">@eventBookingSuccess.nrOfGuests.toString</div>
         </div>
     </li>
     @if(eventBookingSuccess.phoneNumberToHost.isDefined){
-        <li class="list-group-item">
-            <div class="row">
+        <li class="list-group-item" style="@liStyle">
+            <div class="row" style="@rowStyle">
                 <div class="col-md-3"><span class="glyphicon glyphicon-earphone"></span> @Messages("event.prop.phone")</div>
                 <div class="col-md-9">@eventBookingSuccess.phoneNumberToHost.get</div>
             </div>
         </li>
     }
-    <li class="list-group-item">
-        <div class="row">
+    <li class="list-group-item" style="@liStyle">
+        <div class="row" style="@rowStyle">
             <div class="col-md-3"><span class="glyphicon glyphicon-map-marker"></span> @Messages("event.prop.address")</div>
             <div class="col-md-9">
                 @eventBookingSuccess.locationAddress<br>
@@ -63,15 +66,15 @@
         </div>
     </li>
     @if(eventBookingSuccess.guestComment.isDefined){
-        <li class="list-group-item">
-            <div class="row">
+        <li class="list-group-item" style="@liStyle">
+            <div class="row" style="@rowStyle">
                 <div class="col-md-3"><span class="glyphicon glyphicon-comment"></span> @Messages("event.prop.comment")</div>
                 <div class="col-md-9">@eventBookingSuccess.guestComment.get</div>
             </div>
         </li>
     }
-    <li class="list-group-item">
-        <div class="row">
+    <li class="list-group-item" style="@liStyle">
+        <div class="row" style="@rowStyle">
             <div class="col-md-3"><strong>@Messages("event.book.chosen.total-cost")</strong></div>
             <div class="col-md-9">
                 <strong>@Messages("event.price.currency") @eventBookingSuccess.totalCost @Messages("event.price.currency.end")</strong><br>
