--- a/app/views/event/mails/suggestionEmailToGuest.scala.html
+++ b/app/views/event/mails/suggestionEmailToGuest.scala.html
@@ -5,5 +5,5 @@
     @Messages("event.suggest.success.header") - @Messages("event.suggest.success.sub-header")
     <br><br>
     @Messages("event.suggest.success.body")
-    @views.html.event.suggestionSuccessDetails(successValues)
+    @views.html.event.suggestionSuccessDetails(successValues, renderForEmail = true)
 }
