--- a/app/views/custom/passwordChange.scala.html
+++ b/app/views/custom/passwordChange.scala.html
@@ -23,7 +23,7 @@
                     </div>
 
                     <div class="form-actions">
-                        <a class="btn" href="@securesocial.controllers.ProviderControllerHelper.landingUrl">@Messages("securesocial.passwordChange.okButton")</a>
+                        <a class="btn" href="@securesocial.controllers.ProviderControllerHelper.landingUrl(env.configuration)">@Messages("securesocial.passwordChange.okButton")</a>
                     </div>
                 } else {
                     <form action="@env.routes.passwordChangeUrl"
@@ -56,7 +56,7 @@
 
                             <div class="form-actions">
                                 <button type="submit" class="btn btn-primary">@Messages("securesocial.passwordChange.changeButton")</button>
-                                <a class="btn" href="@securesocial.controllers.ProviderControllerHelper.landingUrl">@Messages("securesocial.signup.cancel")</a>
+                                <a class="btn" href="@securesocial.controllers.ProviderControllerHelper.landingUrl(env.configuration)">@Messages("securesocial.signup.cancel")</a>
                             </div>
                         </fieldset>
                     </form>
